refactor: 에러 응답 리팩토링 (2)